--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -1,5 +1,5 @@
         body {
-        background-image: url('/img/footer_lodyas.png');
+        /*background-image: url('/img/footer_lodyas.png');*/
         font-family: 'Permanent Marker', cursive;
     }
 
