--- a/src/client/css/chat-styles.css
+++ b/src/client/css/chat-styles.css
@@ -3,42 +3,42 @@
   overflow: scroll;
   height: 350px;
   margin: -19px 0 0 0;
-  background-color: rgba(255, 255, 255, 0);
+  /*background-color: rgba(255, 255, 255, 0);
   padding: 15px;
-  z-index: -20;
+  z-index: -20;*/
 }
 
 #chat {
-  position: relative;
+  /*position: relative;
   margin: auto;
-  height: 300px;
+  height: 300px;*/
 }
 #messageForm {
   /*width: 78.1%;*/
-  /*float: right;*/
+  /*float: left;*/
 }
 #chat_submit {
   /*float: right;*/
 }
 #message {
-  width: 95%;
-  float: left;
+  /*width: 85%;
+  float: left;*/
 }
 #updates {
-  min-height: 20px;
+  /*min-height: 20px;*/
 
 }
 .chat_container{
 
 }
 .online_users {
-  width: 100%;
+  /*width: 100%;
   margin-top: 20px;
   float: left;
   box-shadow: 3px 3px 3px #202020;
-  z-index: 20;
+  z-index: 20;*/
 }
 
 .btn {
-  margin: 5px;
+  /*margin: 5px;*/
 }
