--- a/src/client/css/main-styles.css
+++ b/src/client/css/main-styles.css
@@ -8,13 +8,13 @@
   background-color: #e9e7da;
 }*/
 nav {
-  margin-left: 2rem;
-  margin-right: 2rem;
+  /*margin-left: 2rem;
+  margin-right: 2rem;*/
 }
 nav ul a {
-  color: #cda34f;
+  /*color: #cda34f;
   font-weight: 300;
-  font-size: 1.25rem;
+  font-size: 1.25rem;*/
   /*position: relative;
   top: 50%;
   transform: translateY(-50%);
@@ -24,8 +24,8 @@ nav img {
   /*padding-top: 1rem;*/
 }
 .brand {
-  padding-top: .5rem;
-  float: right;
+  /*padding-top: .5rem;
+  float: right;*/
   /*margin-bottom: 2rem;*/
 }
 .brand-logo{
@@ -33,35 +33,39 @@ nav img {
   top: 70%;
   transform: translateY(-80%);
   transform-style: preserve-3d;*/
-  padding-top: 30px;
+  /*padding-top: 30px;*/
 }
 
 a{
-  color: #cda34f;
+  /*color: #cda34f;*/
 }
 
 footer.page-footer {
-  background-color: #e9e7da;
-  margin-top: 0px;
+  /*background-color: #e9e7da;
+  margin-top: 0px;*/
 }
 
-@media only screen and (min-width: 601px)
+/*@media only screen and (min-width: 601px)
 #nav-header, nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
   height: 80px;
   line-height: 80px;
-}
+}*/
 
 main {
-  padding-top: 3rem;
-  flex: 1 0 auto;
+  /*padding-top: 3rem;
+  flex: 1 0 auto;*/
 }
 
 body {
-  display: flex;
+  /*display: flex;
   min-height: 100vh;
-  flex-direction: column;
+  flex-direction: column;*/
 }
 
 [ng-click] {
   cursor: pointer;
+}
+
+#tone-sequencer-div {
+  min-height: 500px;
 }
