--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -1,21 +1,25 @@
-        body {
-        /*background-image: url('/img/footer_lodyas.png');*/
-        font-family: 'Permanent Marker', cursive;
-    }
+body {
+background-image: url('/img/footer_lodyas.png');
+font-family: 'Permanent Marker', cursive;
+}
 
-    .border {
-        border: 1px solid #000;
-    }
+.border {
+border: 1px solid #000;
+}
 
-    .app-container {
-        height: 100vh;
-    }
+.app-container {
+height: 100vh;
+}
 
-    @media screen and (min-width: 1366px) {
-        #gallery-1 img {
-            width: 375px;
-        }
-    }
+@media screen and (min-width: 1366px) {
+    #gallery-1 img {
+        width: 375px;
+}
+}
+
+.nav-row {
+    margin-bottom: 50px;
+}
     /*@media screen and (min-width: 1440px) {
 #gallery-1 img {width:428px;}
 }*/
