--- a/src/client/css/chat-styles.css
+++ b/src/client/css/chat-styles.css
@@ -1,7 +1,7 @@
 #messageHistory {
   width: 100%;
   overflow: scroll;
-  height: 350px;
+  height: 250px;
   margin: -19px 0 0 0;
   /*background-color: rgba(255, 255, 255, 0);
   padding: 15px;
@@ -14,10 +14,11 @@
   height: 300px;*/
 }
 #messageForm {
-  /*width: 78.1%;*/
+  width: 100%;
   /*float: left;*/
 }
 #chat_submit {
+  width: 100%;
   /*float: right;*/
 }
 #message {
